--- a/Assignment_2/Makefile
+++ b/Assignment_2/Makefile
@@ -1,32 +1,40 @@
 # CXX Make variable for compiler
-CXX=g++
+CC=g++
 # -std=c++11  C/C++ variant to use, e.g. C++ 2011
 # -Wall       show the necessary warning files
 # -g3         include information for symbolic debugger e.g. gdb 
-CXXFLAGS=-std=c++11 -Wall -g3 -c
+CCFLAGS=-std=c++11 -Wall -g3 -c
 
 # object files
-OBJS = dictionary.o main.o
+OBJS = dictionarytree.o  main.o
+# populatetree.o readprefix.o countprefix.o
 
 # Program name
-PROGRAM = trieApp
+PROGRAM = countprefix
 
-# Rules format:
-# target : dependency1 dependency2 ... dependencyN
-#     Command to make target, uses default rules if not specified
-
-# First target is the one executed if you just type make
-# make target specifies a specific target
-# $^ is an example of a special variable.  It substitutes all dependencies
+# The program depends upon its object files
 $(PROGRAM) : $(OBJS)
-	$(CXX) -o $(PROGRAM) $^
+	$(CC) -pthread -o $(PROGRAM) $(OBJS)
 
-dictionary.o : dictionary.h dictionary.cpp
-	$(CXX) $(CXXFLAGS) dictionary.cpp
-
-main.o : dictionary.h main.cpp
-	$(CXX) $(CXXFLAGS) main.cpp
+main.o : main.cpp
+	$(CC) $(CCFLAGS) main.cpp
 	
+dictionarytree.o : dictionarytree.cpp dictionarytree.h
+	$(CC) $(CCFLAGS) dictionarytree.cpp
+
+#populatetree.o : populatetree.cpp populatetree.h
+#	$(CC) $(CCFLAGS) populatetree.cpp
+#
+#readprefix.o: readprefix.cpp readprefix.h
+#	$(CC) $(CCFLAGS) readprefix.cpp
+#
+#countprefix.o: countprefix.cpp countprefix.h
+#	$(CC) $(CCFLAGS) countprefix.cpp
+
+# Once things work, people frequently delete their object files.
+# If you use "make clean", this will do it for you.
+# As we use gnuemacs which leaves auto save files termintating
+# with ~, we will delete those as well.
 clean :
-	rm -f *.o $(PROGRAM)
+	rm -f *.o *~ $(PROGRAM)
 
