--- a/Assignment_4/Makefile
+++ b/Assignment_4/Makefile
@@ -1,7 +1,6 @@
-# Nicholas Lozben and Turner Trowbridge
+# Turner Trowbridge
 # CS480 Section 1 Spring 2023
-# Assignment 3
-# Filename: Makefile
+# Assignment 4
 
 # CXX Make variable for compiler
 CC=g++
@@ -11,10 +10,10 @@ CC=g++
 CCFLAGS=-std=c++11 -Wall -g3 -c -g
 
 # object files
-OBJS = print_helpers.o vaddr_tracereader.o level.o map.o TLB.o page_table.o main.o
+OBJS = main.o
 
 # Program name
-PROGRAM = mmuwithtlb
+PROGRAM = cryptoexc
 
 # The program depends upon its object files
 $(PROGRAM) : $(OBJS)
@@ -22,28 +21,10 @@ $(PROGRAM) : $(OBJS)
 
 main.o : main.cpp
 	$(CC) $(CCFLAGS) main.cpp
-	
-print_helpers.o : print_helpers.cpp print_helpers.h
-	$(CC) $(CCFLAGS) print_helpers.cpp
-
-vaddr_tracereader.o : vaddr_tracereader.cpp vaddr_tracereader.h
-	$(CC) $(CCFLAGS) vaddr_tracereader.cpp
-
-level.o : level.cpp level.h
-	$(CC) $(CCFLAGS) level.cpp
-
-page_table.o : page_table.cpp page_table.h
-	$(CC) $(CCFLAGS) page_table.cpp
-
-map.o : map.cpp map.h
-	$(CC) $(CCFLAGS) map.cpp
-
-TLB.o : TLB.cpp TLB.h
-	$(CC) $(CCFLAGS) TLB.cpp
 
 # Once things work, people frequently delete their object files.
 # If you use "make clean", this will do it for you.
-# As we use gnuemacs which leaves auto save files termintating
+# As we use gnuemacs which leaves auto save files terminating
 # with ~, we will delete those as well.
 clean :
 	rm -f *.o *~ $(PROGRAM)
