Basic implementation works on edoras

--- a/Assignment_4/Makefile
+++ b/Assignment_4/Makefile
@@ -17,7 +17,7 @@ PROGRAM = cryptoexc
 
 # The program depends upon its object files
 $(PROGRAM) : $(OBJS)
-	$(CC) -o $(PROGRAM) $(OBJS)
+	$(CC) -pthread -o $(PROGRAM) $(OBJS)
 
 main.o : main.cpp
 	$(CC) $(CCFLAGS) main.cpp
